fix overflow mobile

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -36,7 +36,7 @@
     gap: 2rem;
 }
 
-.examples-main-content {
+.guide-main-content {
     min-width: 0;
 }
 
